--- a/component/Countdown/Countdown.css
+++ b/component/Countdown/Countdown.css
@@ -10,8 +10,9 @@
   
   /* Wood theme container box */
   .countdown-box {
-    background-color:black;
+    background-color:transparent;
     /* background-image: url('https://tse2.mm.bing.net/th?id=OIP.6vCwacZHBCh3GfA8ANMtbQHaH_&pid=Api&P=0&h=220'); */
+    border: #1F4529 solid 2px;
     color: #fff;
     padding: 20px 30px;
     border-radius: 50px;
