--- a/component/Sidebar/SidebarStyles.css
+++ b/component/Sidebar/SidebarStyles.css
@@ -87,3 +87,10 @@
 .sidebar::-webkit-scrollbar-thumb:hover {
   background: #32cd32;
 }
+.sidebar h2{
+  font-size: 28px;
+  font-weight: bold;
+  color: #E8ECD7;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+  letter-spacing: 1px;
+}
