--- a/routes/rules/Rules.css
+++ b/routes/rules/Rules.css
@@ -27,6 +27,12 @@
     margin: 0;
     font-weight: bold;
   }
+  .rulesContent{
+    max-width: 600px;
+    padding-right: 200px;
+    padding-left: 200px;
+    background-color: #ffffffc7;
+  }
   
   /* Round Section */
   .round {
