new image link added

--- a/component/LoginPage/LoginPage.css
+++ b/component/LoginPage/LoginPage.css
@@ -4,7 +4,7 @@
   align-items: center;
   height: 100vh;
   width: 100%;
-  background-image:url('https://wallpaperaccess.com/full/1132928.jpg');
+  background-image:url('https://github.com/Harsh-Kashyap-github/Nature-Nexus/blob/main/public/photos/grren-bg.jpg?raw=true');
   box-sizing: border-box;
   font-family: 'Arial', sans-serif;
 }
