--- a/component/ReportPage/ReportPage.css
+++ b/component/ReportPage/ReportPage.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-image:url('https://wallpaperaccess.com/full/1132928.jpg');
+    background-image:url('https://github.com/Harsh-Kashyap-github/Nature-Nexus/blob/main/public/photos/grren-bg.jpg?raw=true');
      }
   
   .report-container {
