--- a/component/WelcomePage/WelcomePage.css
+++ b/component/WelcomePage/WelcomePage.css
@@ -21,7 +21,7 @@
   width: 2500px;
   height:100vh;
   border: 2px solid #1F4529;
-  background-image: url('https://static.vecteezy.com/system/resources/thumbnails/015/354/882/original/dark-wood-surface-seamless-texture-loop-dark-wooden-board-panel-background-vertical-across-tree-fibers-direction-video.jpg')
+  background-image: url('https://github.com/Harsh-Kashyap-github/Nature-Nexus/blob/main/public/photos/wood-bg.jpg?raw=true')
 }
 
 .welcome-box h1 {
