--- a/component/roundTwo/RoundTwo.css
+++ b/component/roundTwo/RoundTwo.css
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   /* background: radial-gradient(circle, #b9fbc0 30%, #52b788 70%, #2d6a4f 100%); */
-  background-image: url('https://wallpaperaccess.com/full/1132928.jpg');
+  background-image: url('https://github.com/Harsh-Kashyap-github/Nature-Nexus/blob/main/public/photos/grren-bg.jpg?raw=true');
 }
 
 .container {
