--- a/component/NavBar/NavbarStyles.css
+++ b/component/NavBar/NavbarStyles.css
@@ -1,14 +1,14 @@
 
 .navbar {
   display: flex;
-  justify-content:space-between;
+  justify-content:space-around;
   align-items: center;
   flex-wrap: wrap;
   background-color: #1F4529;
   padding: 15px 20px;
   width: 100%;
   box-sizing: border-box; 
-  min-height: 120px;
+  min-height: 150px;
   top: 0;
   left: 0;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
